# twenty-first

./: .drone.yml  .gitignore  .mailmap  CHANGELOG.md  Cargo.toml  HACKING.md  Makefile  PERFLOG.md  README.md  cliff.toml  clippy.toml  hybrid.sage  mds.sage  rust-toolchain.toml
.cargo/: config.toml
benches/: fft.rs  integer_interpolation.rs  integer_lagrange_interpolation.rs  integer_lagrange_interpolation_slow.rs  lagrange_interpolation_slow.rs  merkle_tree.rs  ntt.rs  ntt_bfield.rs  ntt_forward.rs  polynomial_square.rs  rescue_prime_air_constraints.rs  rescue_prime_wat.rs  rescue_prime_xlix.rs  rpsss_bench_sign.rs  rpsss_bench_verify.rs  stark.rs  stark_bf.rs  stark_rp.rs
bfieldcodec_derive/: Cargo.toml
bfieldcodec_derive/src/: lib.rs
src/: conversion.rs  custom_types.rs  expressions.rs  fft.rs  flow_of_control.rs  functions.rs  homomorphic_encryption.rs  (+9 more)
stark-brainfuck/: Cargo.toml
stark-brainfuck/benches/: stark_bf.rs
stark-brainfuck/src/: evaluation_argument.rs  instruction_table.rs  io_table.rs  lib.rs  memory_table.rs  permutation_argument.rs  processor_table.rs  stark.rs  stark_proof_stream.rs  table.rs  table_collection.rs  vm.rs  xfri.rs
stark-rescue-prime/: Cargo.toml
stark-rescue-prime/benches/: rescue_prime_air_constraints.rs  stark_rp.rs
stark-rescue-prime/src/: lib.rs  stark_constraints.rs  stark_rp.rs
stark-shared/: Cargo.toml  README.md
stark-shared/src/: fri.rs  lib.rs  proof_stream.rs  stark_verify_error.rs
twenty-first/: Cargo.toml  README-wasm32-dev.md  README-wasm32.md  clippy.toml
twenty-first/.cargo/: config.toml
twenty-first/benches/: blake3.rs  block_fast_kernel_mast_hash.rs  coset_extrapolation.rs  database.rs  db_dbtvec.rs  db_leveldb.rs  evaluation.rs  extrapolation.rs  formal_power_series_inverse.rs  interpolation.rs  inverse.rs  inverses.rs  lagrange_interpolation.rs  merkle_tree.rs  merkle_tree_auth_structure_size.rs  merkle_tree_authenticate.rs  ntt.rs  ntt_forward.rs  ntt_par.rs  poly_clean_div.rs  poly_div.rs  poly_mod_reduce.rs  poly_mul.rs  poly_scalar_mul.rs  poly_scale.rs  polynomial_coset.rs  polynomial_scale.rs  polynomial_square.rs  poseidon.rs  poseidon_naive.rs  rescue_prime_air_constraints.rs  rescue_prime_optimized.rs  rescue_prime_regular.rs  rescue_prime_regular_alternative.rs  rescue_prime_xlix.rs  rpsss_bench_sign.rs  rpsss_bench_verify.rs  sha3.rs  sponge_hashing.rs  stark_bf.rs  (+6 more)
twenty-first/proptest-regressions/math/: polynomial.txt
twenty-first/src/: amount.rs  config.rs  error.rs  lib.rs  math.rs  prelude.rs  proptest_arbitrary_interop.rs  shared_math.rs  test_shared.rs  timing_reporter.rs  util_types.rs  utils.rs
twenty-first/src/amount/: dyadic_rationals.rs  u32s.rs
twenty-first/src/math/: b_field_element.rs  bfield_codec.rs  digest.rs  fips202.rs  lattice.rs  mds.rs  ntt.rs  other.rs  polynomial.rs  tip5.rs  traits.rs  x_field_element.rs  zerofier_tree.rs
twenty-first/src/mock/mmr/: mock_mmr.rs  mod.rs
twenty-first/src/shared_math/: b_field_element.rs  bfield_codec.rs  circuit.rs  digest.rs  fips202.rs  fri.rs  i64_circuit.rs  lattice.rs  mds.rs  mpolynomial.rs  ntt.rs  other.rs  polynomial.rs  poseidon.rs  poseidon_calc_round_numbers.py  poseidon_generate_parameters_grain.sage  poseidon_perm_x3_64_24_optimized.sage  rescue_prime.rs  rescue_prime_digest.rs  rescue_prime_optimized.rs  rescue_prime_params.rs  rescue_prime_pfe_flexible.rs  rescue_prime_regular.rs  rescue_prime_regular_alternative.rs  rescue_prime_xlix.rs  stark.rs  test_struct_for_derive.rs  tip5.rs  traits.rs  x_field_element.rs  xfri.rs
twenty-first/src/shared_math/poseidon/: generate_params_poseidon.sage  poseidon_params_n64_t16_alpha7_M160.txt
twenty-first/src/shared_math/rescue_prime/: rescue_prime.sage
twenty-first/src/shared_math/rescue_prime_regular/: .gitignore  CompactFIPS202.py  rescue_prime_regular.sage
twenty-first/src/shared_math/stark/: rescue_prime.rs  stark_constraints.rs  stark_constraints_pfe_flexible.rs  stark_pfe_flexible.rs
twenty-first/src/shared_math/stark/brainfuck/: evaluation_argument.rs  instruction_table.rs  io_table.rs  memory_table.rs  permutation_argument.rs  processor_table.rs  stark.rs  stark_proof_stream.rs  table.rs  table_collection.rs  vm.rs
twenty-first/src/shared_math/stark/rescue_prime/: rpsss.rs  stark_pfe_flexible.rs  stark_rp.rs
twenty-first/src/storage/: database_array.rs  database_vector.rs  level_db.rs  mod.rs  storage_schema.rs  storage_vec.rs  utils.rs
twenty-first/src/storage/storage_schema/: dbtmap.rs  dbtmap_private.rs  dbtsingleton.rs  dbtsingleton_lock.rs  dbtsingleton_nolock.rs  dbtsingleton_private.rs  dbtsingleton_ref.rs  dbtvec.rs  dbtvec_lock.rs  dbtvec_nolock.rs  dbtvec_private.rs  dbtvec_ref.rs  enums.rs  mod.rs  rusty_key.rs  rusty_reader.rs  rusty_value.rs  schema.rs  simple_rusty_reader.rs  simple_rusty_storage.rs  traits.rs
twenty-first/src/storage/storage_vec/: iterators.rs  mod.rs  ordinary_vec.rs  ordinary_vec_lock.rs  ordinary_vec_private.rs  rusty_leveldb_vec.rs  rusty_leveldb_vec_lock.rs  rusty_leveldb_vec_private.rs  storage_vec_trait.rs  traits.rs
twenty-first/src/sync/: atomic_mutex.rs  atomic_rw.rs  mod.rs  shared.rs  traits.rs
twenty-first/src/test_shared/: mmr.rs
twenty-first/src/tip5/: avx512.rs  digest.rs  inverse.rs  mod.rs  naive.rs
twenty-first/src/util_types/: algebraic_hasher.rs  algebraic_prng.rs  blake3_wrapper.rs  database_array.rs  database_table_interface.rs  database_vector.rs  emojihash_trait.rs  level_db.rs  merkle_tree.rs  merkle_tree_maker.rs  mmr.rs  proof_stream.rs  proof_stream_typed.rs  shared.rs  simple_hasher.rs  sponge.rs  storage_schema.rs  storage_vec.rs
twenty-first/src/util_types/mmr/: archival_mmr.rs  mmr_accumulator.rs  mmr_authentication_struct.rs  mmr_membership_proof.rs  mmr_successor_proof.rs  mmr_trait.rs  shared.rs  shared_advanced.rs  shared_basic.rs
twenty-first/tests/: bfield_codec_derive.rs  tests.rs
twenty-first/trybuild/: incorrect_field_attribute.rs  incorrect_field_attribute.stderr  missing_field_attribute.rs  multiple_field_attributes.rs  multiple_field_attributes.stderr
(+170 files in other folders)
