[package]
name = "twenty-first"
version = "0.1.0"
authors = ["sword_smith <thorkilk@gmail.me>"]
edition = "2021"

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.2"
byteorder = "1.4"
console = "0"
colored = "2.0"
hashbrown = "0.12"
itertools = "0.10"
nom = "7.1"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
parity-scale-codec = "3"
paw = "1.0"
phf = { version = "0.10", features = ["macros"] }
primitive-types = { version = "0.11", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
rayon = "1.5"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = ["paw"] }

[[bench]]
name = "polynomial_square"
harness = false

[[bench]]
name = "rescue_prime_xlix"
harness = false

[[bench]]
name = "stark_bf"
harness = false

[[bench]]
name = "ntt_forward"
harness = false

# [[bench]]
# name = "rpsss_bench_sign"
# harness = false

# [[bench]]
# name = "rpsss_bench_verify"
# harness = false

[[bench]]
name = "rescue_prime_air_constraints"
harness = false

[[bench]]
name = "stark_rp"
harness = false

[[bench]]
name = "inverse"
harness = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 0
debug = 2
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = '...'
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false
