[package]
name = "stark-rescue-prime"
version = "0.3.0"
authors = ["Triton Software AG"]
edition = "2021"

license = "GPL-2.0"
description = "A proof-of-concept zk-STARK engine for the Rescue-Prime hash function"
homepage = "https://github.com/Neptune-Crypto/twenty-first"
documentation = "https://github.com/Neptune-Crypto/twenty-first"
repository = "https://github.com/Neptune-Crypto/twenty-first"
readme = "../README.md"

keywords = ["post-quantum", "algebra", "rescue-prime"]
categories = ["cryptography", "mathematics"]

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[dependencies]
twenty-first = { path = "../twenty-first" }
blake3 = "1.2"
serde_json = "1.0"
num-traits = "0.2"
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "stark_rp"
harness = false

[[bench]]
name = "rescue_prime_air_constraints"
harness = false
