[package]
name = "stark-shared"
version = "0.3.0"
authors = ["Triton Software AG"]
edition = "2021"

license = "GPL-2.0"
description = "STARK-related cryptography shared between STARK tutorial implementations"
homepage = "https://github.com/Neptune-Crypto/twenty-first"
documentation = "https://github.com/Neptune-Crypto/twenty-first"
repository = "https://github.com/Neptune-Crypto/twenty-first"
readme = "README.md"

keywords = ["post-quantum", "algebra", "rescue-prime"]
categories = ["cryptography", "mathematics"]

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[dependencies]
twenty-first = { path = "../twenty-first" }
bincode = "*"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"
blake3 = "1.2"
num-traits = "0.2"
rayon = "1.5"
# rand = "0.8"
