[package]
name = "twenty-first"
version = "0.42.0-alpha.9"
authors = ["Triton Software AG"]
edition = "2021"

license = "GPL-2.0"
description = "Collection of mathematics routines and cryptography for the twenty-first century."
homepage = "https://github.com/Neptune-Crypto/twenty-first"
documentation = "https://github.com/Neptune-Crypto/twenty-first"
repository = "https://github.com/Neptune-Crypto/twenty-first"
readme = "../README.md"

keywords = ["polynomial", "merkle-tree", "post-quantum", "algebra", "tip5"]
categories = ["cryptography", "mathematics"]

[features]
# include mock module
mock = []

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "^0.5.1", features = ["html_reports"] }
proptest = "1.5"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.4"
trybuild = "^1.0.99"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bfieldcodec_derive = "0.7"
blake3 = "1.5.4"
get-size = { version = "^0.1.4", features = ["derive"] }
hashbrown = "0.14"
hex = "0.4.3"
itertools = "0.13"
lazy_static = "1.5.0"
num-bigint = { version = "^0.4.6", features = ["serde"] }
num-traits = "^0.2.19"
phf = { version = "^0.11.2", features = ["macros"] }
rand = { version = "0.8", features = ["min_const_gen"] }
rand_distr = "^0.4.3"
rayon = "1.10"
serde = { version = "^1.0.210", features = ["derive"] }
serde-big-array = "^0.5.1"
serde_derive = "^1.0.210"
serde_json = "^1.0.128"
sha3 = "^0.10.8"
thiserror = "^1.0.64"

[[bench]]
name = "tip5"
harness = false

[[bench]]
name = "ntt_forward"
harness = false

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "extrapolation"
harness = false

[[bench]]
name = "coset_extrapolation"
harness = false

[[bench]]
name = "poly_mod_reduce"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "poly_clean_div"
harness = false

[[bench]]
name = "poly_mul"
harness = false

[[bench]]
name = "poly_scalar_mul"
harness = false

[[bench]]
name = "poly_scale"
harness = false

[[bench]]
name = "inverses"
harness = false

[[bench]]
name = "merkle_tree"
harness = false

[[bench]]
name = "merkle_tree_authenticate"
harness = false

[[bench]]
name = "merkle_tree_auth_structure_size"
harness = false

[[bench]]
name = "polynomial_coset"
harness = false

[[bench]]
name = "various_muls"
harness = false

[[bench]]
name = "zerofier"
harness = false

[[bench]]
name = "formal_power_series_inverse"
harness = false
